--- a/orcl-blockchain-platform/workshops/tenancy/manifest.json
+++ b/orcl-blockchain-platform/workshops/tenancy/manifest.json
@@ -1,6 +1,6 @@
 {
-  "workshoptitle": "Oracle Blockchain Platform - Car Marketplace",
-  "help": "livelabs-help-**enterarea**_us@oracle.com",
+  "workshoptitle": "Developing Low Code Blockchain Applications using Apex and Blockchain App Builder",
+  "help": "livelabs-help-db_us@oracle.com",
   "tutorials": [
     {
       "title": "Introduction",
@@ -8,43 +8,48 @@
       "filename": "../../introduction/introduction.md"
     },
     {
-      "title": "Environment Setup",
-      "description": "Verify Setup of compute instance",
-      "filename": "https://oracle-livelabs.github.io/common/labs/verify-compute/verify-compute-ssh-and-novnc.md"
+      "title": "Getting Started",
+      "description": "This is the prerequisites for customers using Free Trial and Paid tenancies, and Always Free accounts (if applicable). The title of the lab and the Contents Menu title (the title above) match for Prerequisite lab. This lab is always first.",
+      "filename": "https://oracle-livelabs.github.io/common/labs/cloud-login/pre-register-free-tier-account.md"
     },
     {
-      "title": "Initialize Environment ",
+      "title": "Lab 1: Prepare Setup",
+      "description": "How to download your ORM stack and update security rules for an existing VCN",
+      "filename": "../../prepare-setup/prepare-setup.md"
+    },
+    {
+      "title": "Lab 2: Environment Setup",
+      "description": "How to provision the workshop environment and connect to it",
+      "filename": "https://oracle-livelabs.github.io/common/labs/setup-compute-generic/setup-compute-novnc-ssh.md"
+    },
+    {
+      "title": "Lab 3: Initialize Environment ",
       "description": "Initialize Environment",
       "filename": "../../initialize-environment/initialize-environment.md"
     },
     {
-      "title": "Lab 1: Create a Blockchain Network connecting 3 Organizations",
+      "title": "Lab 4: Create a Blockchain Network connecting 3 Organizations",
       "description": "OBP Environment Setup",
-      "publisheddate": "3/24/2020",
       "filename": "../../1-labs-obp-env-setup/obp-console.md"
     },
     {
-      "title": "Lab 2:Create and Deploy Smart Contracts using Oracle Blockchain App Builder",
+      "title": "Lab 5: Create and Deploy Smart Contracts using Oracle Blockchain App Builder",
       "description": "OBP App Builder",
-      "publisheddate": "3/24/2020",
       "filename": "../../2-labs-obp-appbuilder/obp-appbuilder.md"
     },
     {
-      "title": "Lab 3: Create & Setup API Gateway to connect with Smart Contract API's",
+      "title": "Lab 6: Create & Setup API Gateway to connect with Smart Contract API's",
       "description": "OBP - API Gateway",
-      "publisheddate": "4/05/2020",
       "filename": "../../3-labs-obp-apigateway/obp-apigateway.md"
     },
     {
-      "title": "Lab 4: Building Car Marketplace application using APEX",
+      "title": "Lab 7: Building Car Marketplace application using APEX",
       "description": "Building Car Marketplace application using APEX",
-      "publisheddate": "4/05/2020",
       "filename": "../../4-labs-obp-application/obp-apex-application.md"
     },
     {
-      "title": "Lab 5: Trading Cars using Tokens in Car Marketplace",
-      "description": "Lab 5: Trading Cars using Tokens in Car Marketplace",
-      "publisheddate": "4/05/2020",
+      "title": "Lab 8: Trading Cars using Tokens in Car Marketplace",
+      "description": "Trading Cars using Tokens in Car Marketplace",
       "filename": "../../5-labs-obp-application-tokenXchange/obp-apex-application-tokenXchange.md"
     },
     {
