--- a/orcl-blockchain-platform/workshops/desktop/manifest.json
+++ b/orcl-blockchain-platform/workshops/desktop/manifest.json
@@ -1,6 +1,6 @@
 {
-  "workshoptitle": "Oracle Blockchain Platform - Car Marketplace",
-  "help": "livelabs-help-**enterarea**_us@oracle.com",
+  "workshoptitle": "Developing Low Code Blockchain Applications using Apex and Blockchain App Builder",
+  "help": "livelabs-help-db_us@oracle.com",
   "tutorials": [
     {
       "title": "Introduction",
@@ -8,43 +8,33 @@
       "filename": "../../introduction/introduction.md"
     },
     {
-      "title": "Environment Setup",
-      "description": "Verify Setup of compute instance",
-      "filename": "https://oracle-livelabs.github.io/common/labs/verify-compute/verify-compute-ssh-and-novnc.md"
-    },
-    {
-      "title": "Initialize Environment ",
-      "description": "Initialize Environment",
-      "filename": "../../initialize-environment/initialize-environment.md"
+      "title": "Getting Started",
+      "description": "Using noVNC Remote Desktop",
+      "filename": "https://oracle-livelabs.github.io/common/labs/remote-desktop/using-novnc-remote-desktop.md"
     },
     {
       "title": "Lab 1: Create a Blockchain Network connecting 3 Organizations",
       "description": "OBP Environment Setup",
-      "publisheddate": "3/24/2020",
       "filename": "../../1-labs-obp-env-setup/obp-console.md"
     },
     {
-      "title": "Lab 2:Create and Deploy Smart Contracts using Oracle Blockchain App Builder",
+      "title": "Lab 2: Create and Deploy Smart Contracts using Oracle Blockchain App Builder",
       "description": "OBP App Builder",
-      "publisheddate": "3/24/2020",
       "filename": "../../2-labs-obp-appbuilder/obp-appbuilder.md"
     },
     {
       "title": "Lab 3: Create & Setup API Gateway to connect with Smart Contract API's",
       "description": "OBP - API Gateway",
-      "publisheddate": "4/05/2020",
       "filename": "../../3-labs-obp-apigateway/obp-apigateway.md"
     },
     {
       "title": "Lab 4: Building Car Marketplace application using APEX",
       "description": "Building Car Marketplace application using APEX",
-      "publisheddate": "4/05/2020",
       "filename": "../../4-labs-obp-application/obp-apex-application.md"
     },
     {
       "title": "Lab 5: Trading Cars using Tokens in Car Marketplace",
-      "description": "Lab 5: Trading Cars using Tokens in Car Marketplace",
-      "publisheddate": "4/05/2020",
+      "description": "Trading Cars using Tokens in Car Marketplace",
       "filename": "../../5-labs-obp-application-tokenXchange/obp-apex-application-tokenXchange.md"
     },
     {
